--- a/qdarch/syslinux.cfg
+++ b/qdarch/syslinux.cfg
@@ -51,19 +51,19 @@ MENU COLOR tabmsg       31;40   #30ffffff #00000000 std
 LABEL arch
     MENU LABEL Arch Linux
     LINUX ../vmlinuz-linux
-    APPEND cryptdevice=/dev/sysdisk:vgarch root=/dev/mapper/vgarch-lvroot rw lang=de locale=de_DE.UTF-8
+    APPEND cryptdevice=/dev/sysdisk:vgarch root=/dev/mapper/vgarch-lvroot rw
     INITRD ../initramfs-linux.img
 
 LABEL archhardened
     MENU LABEL Arch Linux hardened
     LINUX ../vmlinuz-linux-hardened
-    APPEND cryptdevice=/dev/sysdisk:vgarch root=/dev/mapper/vgarch-lvroot rw lang=de locale=de_DE.UTF-8
+    APPEND cryptdevice=/dev/sysdisk:vgarch root=/dev/mapper/vgarch-lvroot rw
     INITRD ../initramfs-linux-hardened.img
 
 LABEL archfallback
     MENU LABEL Arch Linux Fallback
     LINUX ../vmlinuz-linux
-    APPEND cryptdevice=/dev/sysdisk:vgarch root=/dev/mapper/vgarch-lvroot rw lang=de
+    APPEND cryptdevice=/dev/sysdisk:vgarch root=/dev/mapper/vgarch-lvroot rw
     INITRD ../initramfs-linux-fallback.img
 
 #LABEL windows
